# DotConfig

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
docs/: architecture.md  ui-sketch.md
scripts/: build-all.bat  build-all.sh
src/: App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/git_config/: mod.rs
src/api/: tauri.ts
src/components/: AliasEditor.tsx  ConfigGroupNav.tsx  ConfigItem.tsx  DiffSummary.tsx  RemoteEditor.tsx  ScopeTabs.tsx  Titlebar.tsx  Toolbar.tsx
src/schema/: configSchema.ts
src/stores/: aliasStore.ts  configStore.ts  remoteStore.ts
src/styles/: global.css
